syntax = "proto3";
package fairyring.icq;

import "gogoproto/gogo.proto";

option go_package = "fairyring/x/icq/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  string channelId = 1;
  string portID = 2;
}
